--- a/public/styles.css
+++ b/public/styles.css
@@ -1,3 +1,14 @@
 body {
-    color: gray;
+    color: lightseagreen;
+    background-color: lightcyan;
+}
+
+#messageInput{
+    width: 50%;
+}
+
+div {
+    color: orangered;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 2em;
 }
